# archivematica-storage-service

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README_PERMANENT.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/: dependabot.yml
.github/workflows/: build.yml  push-images.yml  test.yml
install/: README.md  storage-service.gunicorn-config.py
src/archivematica/storage_service/: manage.py
src/archivematica/storage_service/administration/: apps.py  forms.py  roles.py  urls.py  views.py
src/archivematica/storage_service/common/: apps.py  backends.py  helpers.py  middleware.py  premis.py  signals.py  startup.py  utils.py
src/archivematica/storage_service/common/management/commands/: create_aip_replicas.py  import_aip.py  populate_aip_checksums.py  populate_aip_stored_dates.py
src/archivematica/storage_service/locations/: admin.py  apps.py  constants.py  datatable_utils.py  forms.py  urls.py  views.py
src/archivematica/storage_service/locations/api/: resources.py  urls.py  v1.py  v2.py
src/archivematica/storage_service/locations/api/sword/: helpers.py  views.py
src/archivematica/storage_service/locations/migrations/: 0001_initial.py  0002_v0_4.py  0003_v0_5.py  0004_v0_7.py  0014_verbose_field_names.py  0027_update_default_transfer_source_description.py  0029_python3.py  0034_use_uuidfield.py
src/archivematica/storage_service/locations/models/: __init__.py  archipelago.py  arkivum.py  async_manager.py  dataverse.py  dspace.py  dspace_rest.py  duracloud.py  event.py  fedora.py  gpg.py  local_filesystem.py  location.py  lockssomatic.py  nfs.py  package.py  pipeline.py  pipeline_local.py  rclone.py  replica_staging.py  s3.py  space.py  swift.py
src/archivematica/storage_service/static/js/: project.js
src/archivematica/storage_service/storage_service/: urls.py  wsgi.py
src/archivematica/storage_service/storage_service/settings/: base.py  local.py  production.py  test.py  testmysql.py
src/archivematica/storage_service/storage_service/settings/components/: auth.py  csp.py
src/archivematica/storage_service/templates/administration/: key_armor_alert.html  key_detail.html  key_list.html  user_api_key_alert.html  user_detail.html  user_form.html
src/archivematica/storage_service/templates/locations/: pipeline_detail.html
storage_service/administration/migrations/: 0001_initial.py
storage_service/common/: backends.py  middleware.py  premis.py  startup.py  utils.py
storage_service/locations/models/: async_manager.py  dataverse.py  dspace_rest.py  gpg.py  package.py  rclone.py  s3.py  space.py
storage_service/storage_service/settings/: base.py
tests/administration/: test_roles.py  test_users.py  test_views.py
tests/common/: conftest.py  test_command_import_aip.py  test_command_populate_aip_checksums.py  test_command_populate_aip_stored_dates.py  test_middleware.py  test_premis.py  test_utils.py
tests/integration/: conftest.py  docker-compose.yml  test_integration.py  test_oidc_auth.py
tests/integration/etc/keycloak/: realm.json
tests/locations/: test_api.py  test_archipelago.py  test_arkivum.py  test_callbacks.py  test_datatable.py  test_dataverse.py  test_dspace.py  test_dspace_rest.py  test_duracloud.py  test_fixity_log.py  test_forms.py  test_gpg.py  test_locations.py  test_lockssomatic.py  test_package.py  test_package_pointer.py  test_pipeline.py  test_rclone.py  test_replica_staging.py  test_s3.py  test_signals.py  test_space.py  test_swift.py
tests/storage_service/: test_cas.py  test_helpers.py  test_oidc.py  test_password_validation.py  test_startup.py
